Archive2/cb/59f35d3d3a52f9/output
main.cpp:10:24: warning: if statement has empty body [-Wempty-body]
        if (x % 2 != 0);
                       ^
main.cpp:10:24: note: put the semicolon on a separate line to silence this warning
main.cpp:11:9: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
        cout << x << " is a prime number \n";
        ^~~~
        std::cout
/usr/include/c++/v1/iostream:50:33: note: 'std::cout' declared here
extern _LIBCPP_FUNC_VIS ostream cout;
                                ^
main.cpp:13:24: warning: if statement has empty body [-Wempty-body]
        if (x % 3 != 0);
                       ^
main.cpp:13:24: note: put the semicolon on a separate line to silence this warning
main.cpp:14:9: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
        cout << x << "\n";
        ^~~~
        std::cout
/usr/include/c++/v1/iostream:50:33: note: 'std::cout' declared here
extern _LIBCPP_FUNC_VIS ostream cout;
                                ^
main.cpp:16:24: warning: if statement has empty body [-Wempty-body]
        if (x % 4 != 0);
                       ^
main.cpp:16:24: note: put the semicolon on a separate line to silence this warning
main.cpp:17:9: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
        cout << x << "\n";
        ^~~~
        std::cout
/usr/include/c++/v1/iostream:50:33: note: 'std::cout' declared here
extern _LIBCPP_FUNC_VIS ostream cout;
                                ^
main.cpp:19:24: warning: if statement has empty body [-Wempty-body]
        if (x % 5 != 0); 
                       ^
main.cpp:19:24: note: put the semicolon on a separate line to silence this warning
main.cpp:20:9: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
        cout << x << "\n";
        ^~~~
        std::cout
/usr/include/c++/v1/iostream:50:33: note: 'std::cout' declared here
extern _LIBCPP_FUNC_VIS ostream cout;
                                ^
main.cpp:22:24: warning: if statement has empty body [-Wempty-body]
        if (x % 6 != 0); 
                       ^
main.cpp:22:24: note: put the semicolon on a separate line to silence this warning
main.cpp:23:9: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
        cout << x << "\n";
        ^~~~
        std::cout
/usr/include/c++/v1/iostream:50:33: note: 'std::cout' declared here
extern _LIBCPP_FUNC_VIS ostream cout;
                                ^
main.cpp:25:24: warning: if statement has empty body [-Wempty-body]
        if (x % 7 != 0); 
                       ^
main.cpp:25:24: note: put the semicolon on a separate line to silence this warning
main.cpp:26:9: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
        cout << x << "\n"; 
        ^~~~
        std::cout
/usr/include/c++/v1/iostream:50:33: note: 'std::cout' declared here
extern _LIBCPP_FUNC_VIS ostream cout;
                                ^
main.cpp:28:24: warning: if statement has empty body [-Wempty-body]
        if (x % 8 != 0); 
                       ^
main.cpp:28:24: note: put the semicolon on a separate line to silence this warning
main.cpp:29:9: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
        cout << x << "\n";
        ^~~~
        std::cout
/usr/include/c++/v1/iostream:50:33: note: 'std::cout' declared here
extern _LIBCPP_FUNC_VIS ostream cout;
                                ^
main.cpp:31:24: warning: if statement has empty body [-Wempty-body]
        if (x % 9 != 0); 
                       ^
main.cpp:31:24: note: put the semicolon on a separate line to silence this warning
main.cpp:32:9: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
        cout << x << "\n";
        ^~~~
        std::cout
/usr/include/c++/v1/iostream:50:33: note: 'std::cout' declared here
extern _LIBCPP_FUNC_VIS ostream cout;
                                ^
main.cpp:8:33: warning: for loop has empty body [-Wempty-body]
    for (x = 1.0; x <= 100; x++);
                                ^
main.cpp:8:33: note: put the semicolon on a separate line to silence this warning
9 warnings and 8 errors generated.
